fix(renderer): cards initially not blurred due to page transition; round corners equally in tablist

--- a/packages/renderer/src/app/components/maintenance/maintenance.component.css
+++ b/packages/renderer/src/app/components/maintenance/maintenance.component.css
@@ -1,15 +1,3 @@
-.p-tab {
-  @apply mx-auto;
-}
-
-.p-tabpanels {
-  border-radius: 10px;
-}
-
-::ng-deep .p-tablist-tab-list {
-  border-radius: 10px !important;
-}
-
 .maintenance-big-card {
   border: 2px solid transparent;
 }
